--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -330,6 +330,9 @@
     <ClCompile Include="SourceCodo\PartsWindowModelForArms.cpp">
       <Filter>Tahara\UI</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCodo\CFont.cpp">
+      <Filter>Tahara\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCodo\CameraMission.h">
@@ -584,6 +587,9 @@
     <ClInclude Include="SourceCodo\PartsWindowModelForArms.h">
       <Filter>Tahara\UI</Filter>
     </ClInclude>
+    <ClInclude Include="SourceCodo\CFont.h">
+      <Filter>Tahara\UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\DebugText.hlsl">
@@ -602,6 +608,9 @@
       <Filter>ShaderFile</Filter>
     </FxCompile>
     <FxCompile Include="Shader\Sprite2D.hlsl">
+      <Filter>ShaderFile</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\FontText.hlsl">
       <Filter>ShaderFile</Filter>
     </FxCompile>
   </ItemGroup>
