メッセボックス作成

--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -122,7 +122,10 @@
     <ClCompile Include="SourceCodo\GameObject.cpp" />
     <ClCompile Include="SourceCodo\InputCharactor.cpp" />
     <ClCompile Include="SourceCodo\InputRobo.cpp" />
-    <ClCompile Include="SourceCodo\KeyInput.cpp" />
+    <ClCompile Include="SourceCodo\KeyInput.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="SourceCodo\LineBox.cpp" />
     <ClCompile Include="SourceCodo\Main.cpp" />
     <ClCompile Include="SourceCodo\MissionModel.cpp" />
@@ -215,7 +218,10 @@
     <ClInclude Include="SourceCodo\Global.h" />
     <ClInclude Include="SourceCodo\InputCharactor.h" />
     <ClInclude Include="SourceCodo\InputRobo.h" />
-    <ClInclude Include="SourceCodo\KeyInput.h" />
+    <ClInclude Include="SourceCodo\KeyInput.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="SourceCodo\LineBox.h" />
     <ClInclude Include="SourceCodo\Main.h" />
     <ClInclude Include="SourceCodo\MissionModel.h" />
