スプライトクラスの改造とビルの導入

--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClCompile Include="SourceCodo\KeyInput.cpp">
       <Filter>Tahara\System</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCodo\Building.cpp">
+      <Filter>Tahara</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCodo\CameraMission.h">
@@ -601,6 +604,9 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\KeyInput.h">
       <Filter>Tahara\System</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\Building.h">
+      <Filter>Tahara</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
