--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="SourceCodo\AssembleUi.cpp" />
     <ClCompile Include="SourceCodo\BlackScreen.cpp" />
     <ClCompile Include="SourceCodo\BlendState.cpp" />
+    <ClCompile Include="SourceCodo\Building.cpp" />
     <ClCompile Include="SourceCodo\Camera.cpp" />
     <ClCompile Include="SourceCodo\CameraAssemble.cpp" />
     <ClCompile Include="SourceCodo\CameraEnding.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="SourceCodo\AssembleUi.h" />
     <ClInclude Include="SourceCodo\BlackScreen.h" />
     <ClInclude Include="SourceCodo\BlendState.h" />
+    <ClInclude Include="SourceCodo\Building.h" />
     <ClInclude Include="SourceCodo\Camera.h" />
     <ClInclude Include="SourceCodo\CameraAssemble.h" />
     <ClInclude Include="SourceCodo\CameraEnding.h" />
