--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ TestResult.xml
 [Rr]eleasePS/
 dlldata.c
 
-RoboStatusCsvData/
+ShiningRoadProject/Data/FileData/RoboStatusCsvData/
 *_i.c
 *_p.c
 *_i.h
