--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,10 @@ TestResult.xml
 [Rr]eleasePS/
 dlldata.c
 
+RoboStatusCsvData/
 /RoboStatusCsvData/
+ShiningRoadProject/Data/FileData/RoboStatusCsvData/
+
 *_i.c
 *_p.c
 *_i.h
