--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ dlldata.c
 RoboStatusCsvData/
 /RoboStatusCsvData/
 ShiningRoadProject/Data/FileData/RoboStatusCsvData/
+/ShiningRoadProject/Data/FileData/RoboStatusCsvData/
 
 *_i.c
 *_p.c
