タイトルのメニューの基底クラス作成

--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -135,7 +135,8 @@
     <ClCompile Include="SourceCodo\MenuWindowGameOverBase.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowGameOverContinue.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowGameOverDoAssemble.cpp" />
-    <ClCompile Include="SourceCodo\MenuWindowTitle.cpp" />
+    <ClCompile Include="SourceCodo\MenuWindowTitleBase.cpp" />
+    <ClCompile Include="SourceCodo\MenuWindowTitleStartOrEnd.cpp" />
     <ClCompile Include="SourceCodo\MissionModel.cpp" />
     <ClCompile Include="SourceCodo\Object.cpp" />
     <ClCompile Include="SourceCodo\ObjSkinMesh.cpp" />
@@ -237,7 +238,8 @@
     <ClInclude Include="SourceCodo\MenuWindowGameOverBase.h" />
     <ClInclude Include="SourceCodo\MenuWindowGameOverContinue.h" />
     <ClInclude Include="SourceCodo\MenuWindowGameOverDoAssemble.h" />
-    <ClInclude Include="SourceCodo\MenuWindowTitle.h" />
+    <ClInclude Include="SourceCodo\MenuWindowTitleBase.h" />
+    <ClInclude Include="SourceCodo\MenuWindowTitleStartOrEnd.h" />
     <ClInclude Include="SourceCodo\MissionModel.h" />
     <ClInclude Include="SourceCodo\MyMacro.h" />
     <ClInclude Include="SourceCodo\Object.h" />
